poc/tests/errors/test_FplVariableAlreadyDeclared_predicate_08.fpl
Test.Namespace
{
    theory
    {
        pred Test()
        {
            x: Nat
            true

            mandatory Nat TestProperty()
            {
                x: Nat
                self:=x
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:12:17: The name 'x' was already declared in the current context at (7,13)